# ige-mac-integration

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  NEWS  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.scan
bindings/: Makefile.am  Makefile.in
bindings/python/: Makefile.am  Makefile.in
bindings/python/gtk3_osxapplication/: Makefile.am  Makefile.in
bindings/python/gtk_osxapplication/: Makefile.am  Makefile.in
bindings/python/igemacintegration/: Makefile.am  Makefile.in
data/: Makefile.in
docs/: Makefile.am  Makefile.in
docs/reference/: Makefile.in
m4/: EbgMacOSXOptions.m4  glib-2.0.m4
src/: .gitattributes  GNSMenuBar.c  GNSMenuBar.h  GNSMenuItem.c  GNSMenuItem.h  GtkApplicationDelegate.c  GtkApplicationDelegate.h  GtkApplicationNotify.c  GtkApplicationNotify.h  Makefile.am  Makefile.in  cocoa_menu.c  cocoa_menu.h  cocoa_menu_item.c  cocoa_menu_item.h  gtkosxapplication.c  gtkosxapplication.h  gtkosxapplication_quartz.c  ige-mac-bundle.c  ige-mac-dock.c  ige-mac-image-utils.c  ige-mac-menu.c  test-integration.c
strings/: Makefile.in
